# pandera-practice

./: README.md  check_env.py  employee_schema.py  pyproject.toml  run_test.py  sample_validation.py  validate_employee_data.py  validate_invalid_data.py  validate_test_cases.py
pandera_validation/: __init__.py
pandera_validation/schemas/: __init__.py  employee.py
pandera_validation/utils/: __init__.py  validation.py
tests/: conftest.py  test_employee_validation.py
